--- a/Web.config
+++ b/Web.config
@@ -12,9 +12,10 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-TheLawProject-20210220104610;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-TheLawProject-20210220104610.mdf" />
   </connectionStrings>
   <system.web>
+    <customErrors mode="Off"></customErrors>
     <compilation debug="true" targetFramework="4.0"/>
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/Login.aspx" timeout="2880" />
+      <forms loginUrl="Login.aspx" timeout="2880" />
     </authentication>
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
